# 6dof-rocket-trajectory-simulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.py  requirements.txt  rocket_flow_prompt.txt
.github/workflows/: ci.yml  x86_avx2_benchmark.yml
configs/: engine_cutoff.yaml  extreme_drag.yaml  heavy_payload.yaml  high_wind.yaml  nominal.yaml  separation_anomaly.yaml  thrust_loss.yaml
cpp/: rk4_reference.cpp
cpp/include/: lock_free_ring.hpp  rocket_sim_cpp.hpp
cpp/src/: config_loader.cpp  event_engine_main.cpp  monte_carlo_main.cpp  pybind_module.cpp  rocket_sim_cpp.cpp  sim_main.cpp  simd_batch_rk4_main.cpp  tests_main.cpp  validate_main.cpp
data/: thrust_curve.csv
docs/: DEBUGGING_CASE_STUDY.md  PERFORMANCE_REPORT.md  PERF_PROFILE_REPORT.md  PROJECT_JOURNEY.md  REQUIREMENTS.md  VALIDATION_REPORT.md  VERIFICATION_MATRIX.md  X86_AVX2_RUNBOOK.md
portfolio/: index.html  styles.css
prosperity_round1/: combined_pepper_osmium.py  datamodel.py  mixed_v2.py  osmium_only.py  pepper_only.py  research_round1.py  trader.py
rocket_sim/: __init__.py  config.py  control.py  dynamics.py  estimation.py  models.py  plotting.py  simulate.py  validation.py
scripts/: benchmark.py  benchmark_cpp_engines.py  failure_modes.py  generate_perf_artifacts.py  monte_carlo.py  parity_check.py  run_ekf_demo.py  validate.py
spacex_6dof_sim/: .gitignore  README.md
spacex_6dof_sim/rocket_sim/: atmosphere.py  dynamics.py  models.py  simulate.py
tests/: test_config.py  test_ekf.py  test_sim.py
ws-clean-35/.metadata/: .lock_info
ws-clean-35/.metadata/.plugins/org.eclipse.core.resources/.projects/.org.eclipse.egit.core.cmp/: .location
ws-clean-35/.metadata/.plugins/org.eclipse.core.resources/.projects/ACTIVE_SEGMENTATION/: .location  .markers
ws-clean-35/.metadata/.plugins/org.eclipse.core.resources/.projects/ACTIVE_SEGMENTATION/org.eclipse.egit.core/: GitProjectData.properties
ws-clean-35/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
ws-clean-35/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
ws-clean-35/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
ws-clean-35/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
ws-clean-35/.metadata/.plugins/org.eclipse.jdt.core/: 110443866.index  1314776214.index  1343258515.index  1865797976.index  1990530172.index  2036720411.index  223505870.index  2400162382.index  2571409690.index  2918744595.index  3102647975.index  3105350115.index  3275913458.index  3421191973.index  3448924841.index  34975203.index  359684537.index  3620144045.index  3646581517.index  3670878766.index  3749609792.index  3852025691.index  4086357344.index  575643957.index  6275515.index  944379487.index  assumedExternalFilesCache  externalFilesCache  externalLibsTimeStamps  nonChainingJarsCache  savedIndexNames.txt
ws-clean-35/.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml  libraryInfos.xml
ws-clean-35/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
ws-clean-35/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
ws-clean-35/.metadata/.plugins/org.eclipse.wst.jsdt.core/: externalLibsTimeStamps
